// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Object {
  "author___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZPbodyTextNode",
  "children": Array [
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZPdescriptionTextNode",
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZPbodyTextNode",
  ],
  "contentful_id": "5Q1RtFHGRDbvbY5rZbaaZP",
  "createdAt": "2020-04-03T10:51:33.143Z",
  "description___NODE": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZPdescriptionTextNode",
  "heroImage___NODE": "a1b2c2345def___c2gPoPORmbNHm4LwDcgEmvd",
  "id": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-04-03T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-04-03T10:51:33.143Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0",
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 3`] = `
Object {
  "author___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nlbodyTextNode",
  "children": Array [
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nldescriptionTextNode",
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nlbodyTextNode",
  ],
  "contentful_id": "5Q1RtFHGRDbvbY5rZbaaZP",
  "createdAt": "2020-04-03T10:51:33.143Z",
  "description___NODE": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nldescriptionTextNode",
  "heroImage___NODE": "a1b2c2345def___c2gPoPORmbNHm4LwDcgEmvd___nl",
  "id": "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-04-03T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-04-03T10:51:33.143Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 4`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og___nl",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "a1b2c2345def___c5Q1RtFHGRDbvbY5rZbaaZP___nl",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og___nl",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;

exports[`gatsby-node should update a blogpost 1`] = `
Object {
  "author___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6KebodyTextNode",
  "children": Array [
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6KedescriptionTextNode",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6KebodyTextNode",
  ],
  "contentful_id": "3K9b0esdy0q0yGqgW2g6Ke",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "description___NODE": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6KedescriptionTextNode",
  "heroImage___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U",
  "id": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2017-05-15T00:00+02:00",
  "slug": "hello-world",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "tags": Array [
    "general",
    "javascript",
  ],
  "title": "Hello world 1234",
  "updatedAt": "2020-04-03T10:46:20.911Z",
}
`;

exports[`gatsby-node should update a blogpost 2`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;

exports[`gatsby-node should update a blogpost 3`] = `
Object {
  "author___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nlbodyTextNode",
  "children": Array [
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nldescriptionTextNode",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nlbodyTextNode",
  ],
  "contentful_id": "3K9b0esdy0q0yGqgW2g6Ke",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "description___NODE": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nldescriptionTextNode",
  "heroImage___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U___nl",
  "id": "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2017-05-15T00:00+02:00",
  "slug": "hello-world",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "tags": Array [
    "general",
    "javascript",
  ],
  "title": "Hello world 1234",
  "updatedAt": "2020-04-03T10:46:20.911Z",
}
`;

exports[`gatsby-node should update a blogpost 4`] = `
Object {
  "blog post___NODE": Array [
    "a1b2c2345def___c31TNnjHlfaGUoMOwU0M2og___nl",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "a1b2c2345def___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "a1b2c2345def___c3K9b0esdy0q0yGqgW2g6Ke___nl",
  ],
  "children": Array [
    "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-01T00:00:00.000Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "a1b2c2345def___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "a1b2c2345def___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "a1b2c2345def",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-01T00:00:00.000Z",
}
`;
